--- a/src/app/pages/toma-pedido/toma-pedido.component.html
+++ b/src/app/pages/toma-pedido/toma-pedido.component.html
@@ -1,4 +1,4 @@
-<form  [formGroup]="form" (ngSubmit)="operar()" #espForm="ngForm">
+<form  [formGroup]="form" (ngSubmit)="registrarPedido()" #espForm="ngForm">
 
   <div class="wrapper ">
 
@@ -12,7 +12,7 @@
   </div>
 
       <mat-form-field appearance="fill">
-               <mat-select placeholder="Selecciona mesa" [(value)]="mesaSeleccionada" formControlName="mesa" multiple>
+               <mat-select placeholder="Selecciona mesa" [(value)]="mesaSeleccionada" formControlName="mesas" multiple>
                   <mat-option *ngFor="let p of (mesas$ | async)" [value]="p" >
                       {{p.codigo}}
                   </mat-option>
@@ -31,7 +31,7 @@
     <div class="aside">
       <mat-toolbar>Carta :
        <mat-form-field appearance="fill">
-        <mat-select placeholder="Selecciona producto" [(value)]="producto" formControlName="producto" >
+        <mat-select placeholder="Selecciona producto"  formControlName="producto" >
         <mat-option value="">Selecciona Producto</mat-option>
            <mat-option *ngFor="let p of (productos$ | async)" [value]="p" >
                {{p.descripcion}}
@@ -53,28 +53,27 @@
        <!-- <ng-container formArrayName='pedidosDetalle'>
          <ng-container *ngFor='let pedidoForm of pedidosDetalle.controls; let i = index' > -->
 
-          <div class="example-button-row" formArrayName='pedidosDetalle'>
+          <div formArrayName='pedidosDetalle'>
 
 
-           <div class="example-flex-container"  *ngFor='let pedidoForm of pedidosDetalle.controls; let i = index' formGroupName="{{i}}">
+           <div class="display-table"   *ngFor='let pedidoForm of pedidosDetalle.controls; let i = index' formGroupName="{{i}}">
 
             <div >
-              <mat-form-field  class="example-form-field" >
+              <label>{{getNameLabel(i)}}</label>
+              <!-- <mat-form-field  class="example-form-field-nombre1" >
                 <input matInput  formControlName="nombre"  readonly >
-             </mat-form-field>
+             </mat-form-field> -->
           </div>
             <div>
-             <button  aria-label="Agregar Producto" mat-flat-button  color="primary" (click)="agregarCantidad(i)">
+             <button type="button" aria-label="Agregar Producto" mat-flat-button  color="primary" (click)="agregarCantidad(i)">
                <mat-icon>add</mat-icon>
              </button>
-           </div>
-           <div class="conteo">
+
              <mat-form-field  class="example-form-field" >
                <input matInput  formControlName="cantidad" readonly >
             </mat-form-field>
-         </div>
-         <div>
-             <button  color="primary" aria-label="Remover Producto" mat-raised-button (click)="removerCantidad(i)">
+            <!-- <mat-label>{{getCantidadLabel(i)}}</mat-label> -->
+             <button type="button" color="primary" aria-label="Remover Producto" mat-raised-button (click)="removerCantidad(i)">
                <mat-icon>remove</mat-icon>
              </button>
            </div>
@@ -87,6 +86,7 @@
            </div>
 
          </div>
+         <button mat-raised-button color="primary" type="submit" >Registrar</button>
         </div>
 
          <!-- </ng-container>
