--- a/src/app/pages/producto/producto.component.css
+++ b/src/app/pages/producto/producto.component.css
@@ -36,7 +36,7 @@
   hyphens: auto;
 }
 
-.mat-column-activo {
+.mat-column-stock {
   word-wrap: break-word !important;
   white-space: unset !important;
   flex: 0 0 17% !important;
@@ -133,3 +133,4 @@
   background-size: cover;
 }
 
+/* grid */
