--- a/src/app/pages/producto/producto.component.html
+++ b/src/app/pages/producto/producto.component.html
@@ -29,20 +29,15 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Precio </th>
       <td mat-cell *matCellDef="let element"> {{element.precio}} </td>
   </ng-container>
-
-
-    <ng-container matColumnDef="activo">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Activo </th>
-      <td mat-cell *matCellDef="let element">
-        <div *ngIf='element.activo' class="activo"></div>
-        <div *ngIf='!element.activo' class="desactivo"></div>
-      </td>
-  </ng-container>
+  <ng-container matColumnDef="stock">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Stock </th>
+    <td mat-cell *matCellDef="let element"> {{element.stock}} </td>
+</ng-container>
 
     <ng-container matColumnDef="acciones">
         <th mat-header-cell *matHeaderCellDef> Acciones </th>
         <td mat-cell *matCellDef="let element">
-            <button mat-button color="primary" [routerLink]="['edicion', element.idProducto]">
+            <button mat-button color="primary" (click)="openDialogMod(element)" >
                 <mat-icon>ballot</mat-icon>
             </button>
             <button mat-button color="accent" (click)="eliminar(element.idProducto)" value="Confirm">
@@ -57,7 +52,7 @@
 </table>
 <mat-paginator [pageSize]="5" [pageSizeOptions]="[5, 10, 25, 100]" [length]='cantidad' (page)="mostrarMas($event)"></mat-paginator>
 
-<button mat-fab color="accent" style="float: right" routerLink='/producto/nuevo'>
+<button mat-fab color="accent" style="float: right" (click)="openDialog()">
   <mat-icon>create</mat-icon>
 </button>
 </div>
