--- a/src/app/pages/toma-pedido/toma-pedido.component.html
+++ b/src/app/pages/toma-pedido/toma-pedido.component.html
@@ -2,39 +2,49 @@
 
   <div class="wrapper ">
 
-
     <div class="aside">
-   <mat-toolbar>Mesas :
-    <div [hidden]="true">
-      <mat-form-field appearance="fill">
-          <input matInput placeholder="ID" required formControlName="id">
-      </mat-form-field>
-  </div>
+      <mat-toolbar>Cliente :</mat-toolbar>
+       <div [hidden]="true">
+         <mat-form-field appearance="fill">
+             <input matInput placeholder="ID" required formControlName="id">
+         </mat-form-field>
+     </div>
 
-      <mat-form-field appearance="fill">
-               <mat-select placeholder="Selecciona mesa" [(value)]="mesaSeleccionada" formControlName="mesas" multiple>
-                  <mat-option *ngFor="let p of (mesas$ | async)" [value]="p" >
-                      {{p.codigo}}
-                  </mat-option>
-              </mat-select>
-      </mat-form-field>
-    </mat-toolbar>
-      <!-- <button mat-raised-button color="primary" type="submit" >Registrar</button> -->
-      <mat-list role="list">
-        <mat-list-item role="listitem" *ngFor="let ex of mesaSeleccionada; let i = index">
-          <p class="b"><span style="font-weight: bold;"> Mesa:</span> {{ex.codigo}} &nbsp; </p>&nbsp;
+         <mat-form-field appearance="fill">
+           <mat-label>Cliente</mat-label>
+                  <mat-select placeholder="Selecciona cliente" [(value)]="clienteSeleccionado" formControlName="clientes" >
+                     <mat-option *ngFor="let p of (clientes$ | async)" [value]="p" >
+                      {{p.apellidoPaterno }} {{p.apellidoMaterno}}, {{p.nombres}}
+                     </mat-option>
+                 </mat-select>
+         </mat-form-field>
 
-            <button mat-raised-button color="warn" (click)="removerMesa(i)">Remover</button>
-        </mat-list-item>
-    </mat-list>
-    </div>
+
+        <!-- <mat-toolbar>Mozo :</mat-toolbar>
+         <div [hidden]="true">
+           <mat-form-field appearance="fill">
+               <input matInput placeholder="ID" required formControlName="id">
+           </mat-form-field>
+       </div> -->
+
+           <mat-form-field appearance="fill">
+            <mat-label>Mozo</mat-label>
+                    <mat-select placeholder="Selecciona mozo" [(value)]="mozoSeleccionado" formControlName="mozos" >
+                       <mat-option *ngFor="let p of (mozos$ | async)" [value]="p" >
+                        {{p.apellidoPaterno }} {{p.apellidoMaterno}}, {{p.nombres}}
+                       </mat-option>
+                   </mat-select>
+           </mat-form-field>
+
+         </div>
+
     <div class="aside">
       <mat-toolbar>Carta :
        <mat-form-field appearance="fill">
-        <mat-select placeholder="Selecciona producto"  formControlName="producto" >
-        <mat-option value="">Selecciona Producto</mat-option>
-           <mat-option *ngFor="let p of (productos$ | async)" [value]="p" >
-               {{p.descripcion}}
+        <mat-select placeholder="Selecciona categoria"  formControlName="categoriaProducto" [(value)]="categoriaProducto" (ngModelChange)="seleccionProductoCategoria(categoriaProducto)">
+        <mat-option value="">Selecciona Categoria</mat-option>
+           <mat-option *ngFor="let p of (categoriasProducto$ | async)" [value]="p" >
+               {{p.nombre}}
            </mat-option>
        </mat-select>
       </mat-form-field>
@@ -50,19 +60,35 @@
       <mat-toolbar>Pedido</mat-toolbar>
 
 
-       <!-- <ng-container formArrayName='pedidosDetalle'>
-         <ng-container *ngFor='let pedidoForm of pedidosDetalle.controls; let i = index' > -->
 
           <div formArrayName='pedidosDetalle'>
+
+            <!-- <div class="display-table"   *ngFor='let pedidoForm of pedidosDetalle.controls; let i = index' formGroupName="{{i}}">
+
+
+                <label>{{getNameLabel(i)}}</label>
+
+               <button type="button" aria-label="Agregar Producto" mat-flat-button  color="primary" (click)="agregarCantidad(i)">
+                 <mat-icon>add</mat-icon>
+               </button>
+
+               <mat-form-field  class="example-form-field" >
+                 <input matInput  formControlName="cantidad" readonly >
+              </mat-form-field>
+               <button type="button" color="primary" aria-label="Remover Producto" mat-raised-button (click)="removerCantidad(i)" mat-flat-button>
+                 <mat-icon>remove</mat-icon>
+               </button>
+
+
+          </div> -->
+
+
 
 
            <div class="display-table"   *ngFor='let pedidoForm of pedidosDetalle.controls; let i = index' formGroupName="{{i}}">
 
             <div >
               <label>{{getNameLabel(i)}}</label>
-              <!-- <mat-form-field  class="example-form-field-nombre1" >
-                <input matInput  formControlName="nombre"  readonly >
-             </mat-form-field> -->
           </div>
             <div>
              <button type="button" aria-label="Agregar Producto" mat-flat-button  color="primary" (click)="agregarCantidad(i)">
@@ -72,8 +98,7 @@
              <mat-form-field  class="example-form-field" >
                <input matInput  formControlName="cantidad" readonly >
             </mat-form-field>
-            <!-- <mat-label>{{getCantidadLabel(i)}}</mat-label> -->
-             <button type="button" color="primary" aria-label="Remover Producto" mat-raised-button (click)="removerCantidad(i)">
+             <button type="button" color="primary" aria-label="Remover Producto" mat-raised-button (click)="removerCantidad(i)" mat-flat-button>
                <mat-icon>remove</mat-icon>
              </button>
            </div>
@@ -86,11 +111,9 @@
            </div>
 
          </div>
-         <button mat-raised-button color="primary" type="submit" >Registrar</button>
+         <button mat-raised-button color="primary" [disabled] = 'habilitado' >Registrar</button>
         </div>
 
-         <!-- </ng-container>
-       </ng-container> -->
 
 
     </div>
